Pull request #249: WDZO-1972: fix parentId filter after reload page
Squashed commit of the following:

commit eb790e9147357e09a0188a725d75dd8420a4af2c
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Jun 28 10:05:57 2021 +0300

    WDZO-1972: fix parentId filter after reload page

--- a/src/containers/UsersPage/UserPage/UsersList/FiltrationBlock/FiltrationBlock.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/FiltrationBlock/FiltrationBlock.module.css
@@ -1,35 +1,28 @@
 .container {
     background-color: #ffffff;
-    padding: 0 15px 15px 15px;
+    padding: 0 15px 15px;
     display: flex;
     align-items: center;
 }
 
 .title {
-    margin-right: 20px;
+    margin-right: 15px;
     font-weight: 600;
     font-size: 15px;
 }
 
 .filterBlock {
     display: flex;
-    column-gap: 20px;
+    column-gap: 15px;
     align-items: center;
 }
 
 .filterItem {
-    display: flex;
-    align-items: center;
+    width: 220px;
 }
 
-.filterItem:global(.ant-select) {
-    width: 200px;
-}
-
-.filterItem:global(.ant-select-clear) {
-    top: 10px;
-    right: 15px !important;
-    opacity: 1 !important;
+.filterItem:first-child {
+    width: 250px;
 }
 
 .clearButton {
@@ -49,8 +42,4 @@
 .clearButton[data-disabled=true] {
     cursor: not-allowed;
     background-color: #e0e0e0;
-}
-
-.autoComplete {
-    width: 250px
 }
